fix(datagrid): update placeholder text for contrast

--- a/packages/angular/projects/clr-angular/src/data/datagrid/_properties.datagrid.scss
+++ b/packages/angular/projects/clr-angular/src/data/datagrid/_properties.datagrid.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -33,7 +33,7 @@
       --clr-datagrid-detail-caret-icon-open-bg-color: var(--clr-color-action-600);
       --clr-datagrid-detail-caret-icon-open-icon-color: var(--clr-color-neutral-0);
 
-      --clr-datagrid-placeholder-color: var(--clr-color-neutral-500);
+      --clr-datagrid-placeholder-color: var(--clr-color-neutral-700);
       --clr-datagrid-placeholder-font-size: #{$clr-h5-font-size};
 
       --clr-datagrid-pagination-btn-disabled-opacity: #{$clr-datagrid-pagination-btn-disabled-opacity};
